--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_2=569
+dock_hsplit_3=-443
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -24,3 +24,13 @@ open_scripts=["res://CharacterBody2D.gd"]
 open_help=[]
 script_split_offset=140
 list_split_offset=0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=false
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
