changed double jumo to single jump and added background tiles

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -2,6 +2,7 @@
 
 executable_path="/Applications/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
+tile_source_sort=0
 
 [debug_options]
 
@@ -20,3 +21,7 @@ last_selected_language="GDScript"
 [dialog_bounds]
 
 project_settings=Rect2(540, 200, 1800, 1400)
+
+[color_picker]
+
+recent_presets=PackedColorArray(0.674196, 0.772317, 0.842962, 0.827451, 0.639216, 0.772549, 0.843137, 0.827451, 0.901291, 0.939428, 0.960169, 0.827451, 0.466667, 0.941176, 0.960784, 0.827451, 0.796078, 0.941176, 0.960784, 0.827451, 0.796078, 0.882353, 0.960784, 0.827451, 0.796078, 0.882353, 0.898039, 0.827451, 0.701961, 0.882353, 0.898039, 0.827451, 0.710441, 0.877095, 0.916474, 0.827451)
