added movement to jump

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -2,13 +2,17 @@
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(122),
-"column": 14,
+"breakpoints": PackedInt32Array(141),
+"column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 29,
-"scroll_position": 18.0,
-"selection": false,
+"h_scroll_position": 66,
+"row": 79,
+"scroll_position": 39.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 79,
+"selection_to_column": 32,
+"selection_to_line": 90,
 "syntax_highlighter": "GDScript"
 }
 
