added raycast line

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -2,17 +2,13 @@
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(141),
-"column": 2,
+"breakpoints": PackedInt32Array(154),
+"column": 3,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 66,
-"row": 79,
-"scroll_position": 39.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 79,
-"selection_to_column": 32,
-"selection_to_line": 90,
+"h_scroll_position": 0,
+"row": 350,
+"scroll_position": 335.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
