--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_split_2=514
+dock_split_2=-47
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=579
@@ -20,7 +20,7 @@ open_scenes=["res://scene_1.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://Marker2D.gd"]
+open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd"]
 open_help=[]
 script_split_offset=300
 list_split_offset=0
