--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(160),
-"column": 0,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 381,
-"scroll_position": 364.0,
-"selection": false,
+"row": 76,
+"scroll_position": 64.0,
+"selection": true,
+"selection_from_column": 3,
+"selection_from_line": 76,
+"selection_to_column": 44,
+"selection_to_line": 76,
 "syntax_highlighter": "GDScript"
 }
 
@@ -31,10 +35,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://LightArea.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
