working to add current state label above character for debugging purposes

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,8 +7,8 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=-47
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=558
-dock_hsplit_3=-432
+dock_hsplit_2=525
+dock_hsplit_3=-543
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scene_1.tscn"]
+open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://LightArea.gd"]
+open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd"]
 open_help=[]
 script_split_offset=300
 list_split_offset=0
