--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"CharacterBody2D",
+"class": &"pushableobject",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Cup_1.gd"
+}])
