--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,7 +1,7 @@
 list=Array[Dictionary]([{
-"base": &"CharacterBody2D",
+"base": &"RigidBody2D",
 "class": &"pushableobject",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Cup_1.gd"
+"path": "res://Cup_RB.gd"
 }])
