added pushable object and cup can be pushed

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,10 +20,10 @@ open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd"]
+open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd"]
 open_help=[]
 script_split_offset=300
-list_split_offset=0
+list_split_offset=139
 
 [editor_log]
 
