--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,5 +3,5 @@ list=Array[Dictionary]([{
 "class": &"pushableobject",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Cup_RB.gd"
+"path": "res://pushableobject.gd"
 }])
