--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn"]
+open_scenes=["res://Cup_1.tscn", "res://scene_1.tscn"]
 
 [ScriptEditor]
 
