created sliding cup

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,6 +1,12 @@
 list=Array[Dictionary]([{
-"base": &"RigidBody2D",
+"base": &"CharacterBody2D",
 "class": &"pushableobject",
+"icon": "",
+"language": &"GDScript",
+"path": "res://pushableobjectkinematic.gd"
+}, {
+"base": &"RigidBody2D",
+"class": &"pushableobjectrigid",
 "icon": "",
 "language": &"GDScript",
 "path": "res://pushableobject.gd"
