--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://Cup_1.tscn", "res://scene_1.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd"]
+open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd"]
 open_help=[]
 script_split_offset=300
 list_split_offset=139
