--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 74,
-"scroll_position": 53.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 74,
-"selection_to_column": 28,
-"selection_to_line": 74,
+"row": 335,
+"scroll_position": 313.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -66,8 +62,8 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
+"row": 30,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -94,9 +90,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 0.0,
-"selection": false,
+"row": 11,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 11,
+"selection_to_column": 25,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
@@ -133,10 +133,28 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 2,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 2,
+"selection_to_column": 0,
+"selection_to_line": 9,
+"syntax_highlighter": "GDScript"
+}
+
+[res://pushableobjectkinematic.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
