--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,13 +16,13 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Cup_1.tscn", "res://scene_1.tscn", "res://Player.tscn", "res://camera.tscn"]
+open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://camera.tscn", "res://cup_2.tscn", "res://catnipball_1.tscn", "res://homescreen.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd"]
+open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd"]
 open_help=[]
-script_split_offset=300
+script_split_offset=484
 list_split_offset=139
 
 [editor_log]
