added decorations and openable door

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=Array[Dictionary]([{
 "base": &"CharacterBody2D",
+"class": &"doorknob",
+"icon": "",
+"language": &"GDScript",
+"path": "res://doorknob.gd"
+}, {
+"base": &"CharacterBody2D",
 "class": &"pushableobject",
 "icon": "",
 "language": &"GDScript",
