--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,11 +4,11 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_split_2=-47
+dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=525
-dock_hsplit_3=-687
+dock_hsplit_2=493
+dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://camera.tscn", "res://cup_2.tscn", "res://catnipball_1.tscn", "res://homescreen.tscn"]
+open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://door_side.tscn", "res://camera.tscn", "res://cup_2.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://Global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd"]
+open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd"]
 open_help=[]
 script_split_offset=484
 list_split_offset=139
