reloaded project save

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,7 +7,7 @@ dock_filesystem_file_list_display_mode=1
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=493
+dock_hsplit_2=540
 dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://door_side.tscn", "res://camera.tscn", "res://cup_2.tscn"]
+open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://door_side.tscn", "res://camera.tscn", "res://cup_2.tscn", "res://basic background.tscn"]
 
 [ScriptEditor]
 
