--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://door_side.tscn", "res://camera.tscn", "res://cup_2.tscn", "res://basic background.tscn"]
+open_scenes=["res://scene_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://door_side.tscn", "res://camera.tscn", "res://cup_2.tscn", "res://scene_2.tscn"]
 
 [ScriptEditor]
 
