save before created main scene

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Rooms/Room_1.tscn", "res://Cup_1.tscn", "res://Player.tscn", "res://door_side.tscn", "res://camera.tscn", "res://cup_2.tscn", "res://Rooms/Room_2.tscn", "res://vase.tscn", "res://energybar.tscn"]
+open_scenes=["res://energybar.tscn", "res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://camera.tscn", "res://house.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://energybar.gd", "res://global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd", "res://Scene_2.gd"]
+open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://energybar.gd", "res://global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd", "res://signaler.gd"]
 open_help=[]
 script_split_offset=484
 list_split_offset=139
