--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 35,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 42,
-"row": 310,
-"scroll_position": 295.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 309,
-"selection_to_column": 36,
-"selection_to_line": 310,
+"h_scroll_position": 0,
+"row": 313,
+"scroll_position": 270.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 3.0,
+"row": 17,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -140,7 +136,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -216,7 +212,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scene_2.gd]
+[res://signaler.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -224,7 +220,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
