reloaded to before merge of levels

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://energybar.tscn", "res://Player.tscn", "res://scene_1.tscn", 
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://energybar.gd", "res://global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd", "res://signaler.gd"]
+open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://energybar.gd", "res://global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd", "res://roomswitcher.gd", "res://signaler.gd"]
 open_help=[]
 script_split_offset=484
 list_split_offset=139
