--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 19,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 313,
-"scroll_position": 270.0,
+"h_scroll_position": 95,
+"row": 242,
+"scroll_position": 234.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 14,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -175,12 +175,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 37,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 15.0,
-"selection": false,
+"row": 32,
+"scroll_position": 13.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 32,
+"selection_to_column": 28,
+"selection_to_line": 32,
 "syntax_highlighter": "GDScript"
 }
 
@@ -213,6 +217,20 @@ state={
 }
 
 [res://signaler.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 23.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://roomswitcher.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
