adding cup state saving for scene_1

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 55,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 248,
-"scroll_position": 322.0,
-"selection": false,
+"row": 335,
+"scroll_position": 270.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 335,
+"selection_to_column": 55,
+"selection_to_line": 335,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 20,
-"scroll_position": 4.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 9,
 "selection_from_line": 20,
@@ -63,11 +67,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 56,
-"scroll_position": 36.0,
+"h_scroll_position": 126,
+"row": 19,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -165,10 +169,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -179,10 +183,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 16,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
