--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([58, 154, 263]),
 "h_scroll_position": 0,
-"row": 335,
-"scroll_position": 270.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 335,
-"selection_to_column": 55,
-"selection_to_line": 335,
+"row": 270,
+"scroll_position": 47.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 13,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 9,
-"selection_from_line": 20,
-"selection_to_column": 19,
-"selection_to_line": 20,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -67,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 3,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 126,
-"row": 19,
-"scroll_position": 0.0,
+"h_scroll_position": 0,
+"row": 40,
+"scroll_position": 46.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,12 +87,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 19.0,
-"selection": false,
+"row": 45,
+"scroll_position": 34.0,
+"selection": true,
+"selection_from_column": 17,
+"selection_from_line": 45,
+"selection_to_column": 21,
+"selection_to_line": 45,
 "syntax_highlighter": "GDScript"
 }
 
@@ -169,10 +165,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 9,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -183,11 +179,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 62,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 0.0,
+"row": 12,
+"scroll_position": 23.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
