--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://energybar.tscn", "res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://camera.tscn"]
+open_scenes=["res://energybar.tscn", "res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://camera.tscn", "res://catnip_1.tscn", "res://scene_3.tscn"]
 
 [ScriptEditor]
 
