fixed lightarea in room 3

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=Array[Dictionary]([{
 "base": &"CharacterBody2D",
+"class": &"catnip",
+"icon": "",
+"language": &"GDScript",
+"path": "res://catnip_1.gd"
+}, {
+"base": &"CharacterBody2D",
 "class": &"doorknob",
 "icon": "",
 "language": &"GDScript",
