--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,13 +16,13 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://energybar.tscn", "res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://camera.tscn", "res://catnip_1.tscn", "res://scene_3.tscn"]
+open_scenes=["res://energybar.tscn", "res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://camera.tscn", "res://catnip_1.tscn", "res://scene_3.tscn", "res://cup_2.tscn", "res://Cup_1.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://global.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://energybar.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://roomswitcher.gd", "res://pushableobjectkinematic.gd"]
+open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://catnip_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://energybar.gd", "res://global.gd", "res://Label.gd", "res://LightArea.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd", "res://roomswitcher.gd"]
 open_help=[]
-script_split_offset=484
+script_split_offset=300
 list_split_offset=139
 
 [editor_log]
