--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([397, 400]),
+"column": 36,
+"folded_lines": Array[int]([76, 405, 408]),
 "h_scroll_position": 0,
-"row": 184,
-"scroll_position": 180.0,
+"row": 45,
+"scroll_position": 59.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 32,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 12,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 3.0,
+"row": 27,
+"scroll_position": 19.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -61,9 +61,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 2,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 6,
+"h_scroll_position": 0,
 "row": 91,
-"scroll_position": 66.0,
+"scroll_position": 30.0,
 "selection": true,
 "selection_from_column": 2,
 "selection_from_line": 91,
@@ -173,11 +173,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 13.0,
+"row": 23,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -191,7 +191,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 39,
-"scroll_position": 23.0,
+"scroll_position": 24.0,
 "selection": true,
 "selection_from_column": 2,
 "selection_from_line": 39,
