starting home screen

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://scene_3.tscn", "res://scorecounter.tscn", "res://scene_4.tscn", "res://camera.tscn", "res://vase.tscn", "res://Cup_1.tscn", "res://cup_2.tscn", "res://catnip_1.tscn"]
+open_scenes=["res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://scene_3.tscn", "res://scorecounter.tscn", "res://scene_4.tscn", "res://camera.tscn", "res://vase.tscn", "res://Cup_1.tscn", "res://cup_2.tscn", "res://catnip_1.tscn", "res://startscreen.tscn"]
 
 [ScriptEditor]
 
