--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://scene_3.tscn", "res://scorecounter.tscn", "res://scene_4.tscn", "res://startscreen.tscn", "res://tutorial.tscn"]
+open_scenes=["res://Player.tscn", "res://scene_1.tscn", "res://scene_2.tscn", "res://scene_3.tscn", "res://scene_4.tscn", "res://startscreen.tscn", "res://end.tscn", "res://tutorial.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Camera.gd", "res://catnipball_1.gd", "res://catnip_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://energybar.gd", "res://global.gd", "res://Label.gd", "res://LightArea.gd", "res://physicalstats.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd", "res://roomswitcher.gd", "res://startscreen.gd", "res://statpointlable.gd", "res://statpoints.gd", "res://text1.gd", "res://text2.gd", "res://text3.gd", "res://text4.gd", "res://tutorial.gd", "res://tutorialplayer.gd"]
+open_scripts=["res://almosthome.gd", "res://Camera.gd", "res://catnipball_1.gd", "res://catnip_1.gd", "res://CharacterBody2D.gd", "res://Cup.gd", "res://Cup_1.gd", "res://Cup_RB.gd", "res://doorknob.gd", "res://door_side.gd", "res://endscore.gd", "res://energybar.gd", "res://global.gd", "res://Label2.gd", "res://Label.gd", "res://LightArea.gd", "res://physicalstats.gd", "res://pushableobject.gd", "res://pushableobjectkinematic.gd", "res://roomswitcher.gd", "res://startscreen.gd", "res://statpointlable.gd", "res://statpoints.gd", "res://text1.gd", "res://text2.gd", "res://text3.gd", "res://text4.gd", "res://timerback.gd", "res://tutorial.gd"]
 open_help=[]
 script_split_offset=358
 list_split_offset=139
